--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Amrutha Murthi-Portfolio</title>
+    <title>Amrutha Murthi</title>
     <style>
       * {
         font-family: 'Roboto', sans-serif;
